--- a/client/package.json
+++ b/client/package.json
@@ -12,21 +12,16 @@
     "react-facebook-login": "^4.1.1",
     "react-https-redirect": "^1.0.11",
     "react-redux": "^6.0.0",
-    "react-router-dom": "^7.5.2",
-    "react-scripts": "^5.0.1",
+    "react-router-dom": "^5.3.4",
     "react-select": "^2.1.2",
     "react-stars": "^2.2.5",
     "redux": "^4.0.1",
     "redux-thunk": "^2.3.0"
   },
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject"
-  },
-  "eslintConfig": {
-    "extends": "react-app"
+    "start": "rsbuild dev",
+    "build": "rsbuild build",
+    "preview": "rsbuild preview"
   },
   "browserslist": [
     ">0.2%",
@@ -35,6 +30,7 @@
     "not op_mini all"
   ],
   "devDependencies": {
-    "eslint": "^7.10.0"
+    "@rsbuild/core": "^1.7.1",
+    "@rsbuild/plugin-react": "^1.4.0"
   }
 }
